@@ -16,8 +16,35 @@ namespace eval ::string::token {
     namespace ensemble create
 }
 
-proc ::string::token::shell {text} {
+proc ::string::token::shell {args} {
     # result = list (word)
+
+    set partial 0
+    set indices 0
+    while {[llength $args]} {
+	switch -glob -- [set o [lindex $args 0]] {
+	    -partial { set partial 1 }
+	    -indices { set indices 1 }
+	    -* {
+		# Unknown option.
+		return -code error \
+		    -errorcode {STRING TOKEN SHELL BAD OPTION} \
+		    "Bad option $o, expected one of -indices, or -partial"
+	    }
+	    * {
+		# Non-option, stop option processing.
+		break
+	    }
+	}
+	set args [lrange $args 1 end]
+    }
+    if {[llength $args] != 1} {
+	return -code error \
+	    -errorcode {STRING TOKEN WRONG ARGS} \
+	    "wrong \# args: should be \"[lindex [info level 0] 0] ?-indices? ?-partial? text\""
+    } else {
+	set text [lindex $args 0]
+    }
 
     set space    \\s
     set     lexer {}
@@ -25,6 +52,12 @@ proc ::string::token::shell {text} {
     lappend lexer {'[^']*'}                                  S:QUOTED
     lappend lexer "\"(\[^\"\]|(\\\\\")|(\\\\\\\\))*\""       D:QUOTED
     lappend lexer "((\[^ $space'\"\])|(\\\\\")|(\\\\\\\\))+" PLAIN
+
+    if {$partial} {
+	lappend lexer {'[^']*$}                             S:QUOTED:PART
+	lappend lexer "\"(\[^\"\]|(\\\\\")|(\\\\\\\\))*$"   D:QUOTED:PART
+    }
+
     lappend lexer {.*}                                       ERROR
 
     set dequote [list \\" \" \\\\ \\ ] ; #"
@@ -46,6 +79,7 @@ proc ::string::token::shell {text} {
 
 	#puts "[format %7s $state] + ($token) = <<[string range $text $start $end]>>"
 
+	set changed 0
 	switch -glob -- ${type}/$state {
 	    ERROR/* {
 		return -code error \
@@ -76,6 +110,15 @@ proc ::string::token::shell {text} {
 		incr end -1
 		lappend result [string range $text $start $end]
 		set state WS
+		set changed 1
+	    }
+	    S:QUOTED:PART/*WORD {
+		# Quoted partial word (at end), single, extract it, ignore delimiter at start, none at end.
+		# Must be followed by nothing.
+		incr start
+		lappend result [string range $text $start $end]
+		set state WS
+		set changed 1
 	    }
 	    D:QUOTED/*WORD {
 		# Quoted word, double, extract it, ignore delimiters.
@@ -85,6 +128,16 @@ proc ::string::token::shell {text} {
 		incr end -1
 		lappend result [string map $dequote [string range $text $start $end]]
 		set state WS
+		set changed 1
+	    }
+	    D:QUOTED:PART/*WORD {
+		# Quoted word, double, extract it, ignore delimiter at start, none at end.
+		# Have to check for and reduce escaped double quotes and backslashes.
+		# Must be followed by nothing.
+		incr start
+		lappend result [string map $dequote [string range $text $start $end]]
+		set state WS
+		set changed 1
 	    }
 	    PLAIN/*WORD {
 		# Unquoted word. extract.
@@ -92,6 +145,7 @@ proc ::string::token::shell {text} {
 		# Must be followed by whitespace.
 		lappend result [string map $dequote [string range $text $start $end]]
 		set state WS
+		set changed 1
 	    }
 	    * {
 		return -code error \
@@ -99,6 +153,10 @@ proc ::string::token::shell {text} {
 		    "Illegal token/state combination $type/$state"
 	    }
         }
+	if {$indices && $changed} {
+	    set last [lindex $result end]
+	    set result [lreplace $result end end [list {*}$token $last]]
+	}
     }
     return $result
 }
@@ -106,5 +164,5 @@ proc ::string::token::shell {text} {
 # # ## ### ##### ######## ############# #####################
 ## Ready
 
-package provide string::token::shell 1
+package provide string::token::shell 1.1
 return
